- Scope access does not work if invoked from external Application (Jira APPSERVER-306)
- Childscopes not visible on customly created scopes (Jira APPSERVER-298)
- Config removal dynamically created room scopes (Jira APPSERVER-165)
- NullPointerException in RTMPProtocolDecoder.decodeHeader under load (Jira SN-103)
- Remote Shared Objects: Sync event doesnt dispatch (Jira CS-5)

Red5 0.8.0 RC1 (2008-09-29)
---------------------------
New Features:
- Socket policy file server to support new security model, starting 
  with Flash Player 9,0,124,0
- Virtual hosting capabilities (Tomcat only)
- W3C log appender for logback modeled after FMS log events and categories
- Ability to unload a context using the ContextLoader
- RTMPS support (Jira SN-69)
- Set default J2EE servlet container / HTTP server to Tomcat
- Flex based application installer for Red5 web applications
- War auto-deployer service
- Added additional MP3 ID3 data to the onMetaData event
- onImageData and MP3 cover art support 

Bugfixes:
- RTMPProtocolDecoder fixed to support RSO sendMessage (Jira CODECS-9)
- Fixed Tomcat logging problem
- Fixed memory leak in ServiceUtils
- Fixed connection timeout (Jira SN-95 / APPSERVER-274)
- Resolved exception with WarLoaderServlet (Jira APPSERVER-224)
- Resolved log directory issue (Jira APPSERVER-246)
- Resolved ServerStream issue with w3c logging (Jira APPSERVER-263)
- Added patch to support ability to implement IBroadcastStream for custom streaming protocols (Jira SN-87)
- Resolved OSX connection problem with players > version 9,0,115
- Added patch for InvocationTargetException on missing files (Jira SN-99 and SN-97)
- Fixed a small issue with stream ids > 100
- Added patch for FLV metadata handling
- Added patch for RTMPT client
- Added patch for start and stop scripts
- Fixed logging in web applications
- Root cause was not being sent on error in Flex message service (Jira APPSERVER-288)