@@ -17,6 +17,7 @@ Bugfixes:
 - Config removal dynamically created room scopes (Jira APPSERVER-165)
 - NullPointerException in RTMPProtocolDecoder.decodeHeader under load (Jira SN-103)
 - Remote Shared Objects: Sync event doesnt dispatch (Jira CS-5)
+- Testing: Added a new automated testing framework (http://jira.red5.org/confluence/display/docs/Chapter+20.+Testing+Red5)
 
 Red5 0.8.0 RC1 (2008-09-29)
 ---------------------------
